--- a/stylesheets/component.css
+++ b/stylesheets/component.css
@@ -1,10 +1,32 @@
 .box-carrello{height:555px!important}
 .container-carrello{height:555px!important}
-.md-modal{position:fixed;top:65%;left:50%;width:100%;max-width:850px;height:555px;z-index:2000;visibility:hidden;-webkit-backface-visibility:hidden;-moz-backface-visibility:hidden;backface-visibility:hidden;-webkit-transform:translateX(-50%) translateY(-50%);-moz-transform:translateX(-50%) translateY(-50%);-ms-transform:translateX(-50%) translateY(-50%);transform:translateX(-50%) translateY(-50%)}
+.md-modal{
+	position:fixed;
+	top:50%;
+	left:50%;
+	width:100%;
+	max-width:850px;
+	height:auto;
+	z-index:2000;
+	visibility:hidden;
+	-webkit-backface-visibility:hidden;
+	-moz-backface-visibility:hidden;
+	backface-visibility:hidden;
+	-webkit-transform:translateX(-50%) translateY(-50%);
+	-moz-transform:translateX(-50%) translateY(-50%);
+	-ms-transform:translateX(-50%) translateY(-50%);
+	transform:translateX(-50%) translateY(-50%)
+}
 .md-show{visibility:visible}
 .md-overlay{position:fixed;width:100%;height:100%;visibility:hidden;top:0;left:0;z-index:1000;opacity:0;background:rgba(14,5,4,0.72);-webkit-transition:all .3s;-moz-transition:all .3s;transition:all .3s}
 .md-show ~ .md-overlay{opacity:1;visibility:visible}
-.md-content{height:400px;color:#000;background:#fff;position:relative;margin:0 auto}
+.md-content{
+	height:400px;
+	color:#000;
+	background:#fff;
+	position:relative;
+	margin:0 auto;
+}
 .md-content > div{padding:10px;margin:0;font-weight:300;font-size:16px}
 .md-content > div p{margin:0;padding:15px 0;text-align:center}
 .md-effect-15.md-modal{-webkit-perspective:1300px;-moz-perspective:1300px;perspective:1300px}
