--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,8 +1,8 @@
 body{background-color:#fff;font-family:'Open Sans Condensed','Montserrat',sans-serif,Arial,Time new Roman,Verdana;font-size:15px;font-size:14px\0/;border:0;margin:0;}
 a{text-decoration:none;color:#000;border:0;}
 a:hover{text-decoration:none;color:#fff;border:0;}
-h1{font-size:33px;margin:0;}
-h2{font-size:20px;margin:0;}
+h1{font-size:33px;}
+h2{font-size:20px;}
 h3{font-size:18px;margin:20px 0;}
 h5{font-size:15px;}
 a img{text-decoration:none;border:none;}
@@ -14,31 +14,12 @@ a img{text-decoration:none;border:none;}
 .aggiungi-tab-rosso button:hover{background-color:#E73333;}
 .botton-guida .bottone:hover{text-decoration:none;background-color:#E73333;}
 .box-footer-center .bottone:hover{background-color:#E73333;}
-.spazio-vuoto{width:100%;height:130px;float:left;margin-top:-100px;}
-.menu-header{
-	width:100%;
-	max-width:1024px;
-	margin:0 auto;
-}
-.mex1{
-	width:100%;
-	height:100%;
-	top:0;
-	left:0;
-	overflow:hidden;
-	position:absolute;
-}
-.img-fondo-mex1{
-	height:100%;
-	width:100%;
-	position:relative;
-	top:0;
-	left:0;
-	overflow:hidden;
-	background:#ffffff url("../images/mappaetablet.jpg") no-repeat center top /cover;
-}
-.mex1 h1{text-align:center;padding-top:130px;color:#f00;}
-.mex1 h2{text-align:center;padding-top:10px;color:#000;}
+.spazio-vuoto{width:100%;height:120px;float:left;background:#29917e;}
+.menu-header{width:100%;max-width:1024px;margin:0 auto;}
+.mex1{width:100%;height:100%;top:0;left:0;overflow:hidden;position:relative;}
+.img-fondo-mex1{height:100%;width:100%;max-width:1024px;margin:0px auto;position:relative;top:0;left:0;overflow:hidden;background:#ffffff url("../images/mappaetablet.jpg") no-repeat center bottom /cover;}
+.mex1 h1{text-align:center;margin-top:50px;color:#ff0000;}
+.mex1 h2{text-align:center;margin-top:10px;color:#000;}
 a#leadpages-close-button{z-index:1;top:-9px;right:-9px;font-family:sans-serif,Arial,Time new Roman,Verdana;}
 #leadpages-close-button{display:block;font-size:16pt;position:absolute;top:-9pt;right:-9pt;width:18pt;height:18pt;color:#FFF;line-height:20pt;text-align:center;text-decoration:none;vertical-align:baseline;cursor:pointer;background:none repeat scroll 0 0 #000;border:2pt solid #FFF;border-radius:18pt;}
 .box-centro{height:150px;}
@@ -47,81 +28,27 @@ a#leadpages-close-button{z-index:1;top:-9px;right:-9px;font-family:sans-serif,Ar
 .promozione{width:500px;height:110px;margin:0 35px;float:left;}
 .promozione p{font-family:'Montserrat',sans-serif,Arial,Time new Roman,Verdana;font-size:20px;padding:0!important;}
 .promozione input{width:90%;margin:25px 20px;background-color:#fff;}
-.mex1 .bottone{
-	width: 200px;
-	height: 55px;
-	background-color: #f33131;
-	border: 2px solid #c80707;
-	border-radius: 10px;
-	color: #ffff;
-	float: left;
-	font-family: "Open Sans Condensed",sans-serif,Arial,Time new Roman,Verdana;
-	font-size: 20px;
-	left: 15%;
-	top: 45%;
-	position: relative;
-	cursor:pointer;
-}
-.button{
-	width:500px;
-	height:65px;
-	float:left;
-	text-align:center;
-}
+.style-bottom1{width:50%;height:100%;top:0px;right:0px;float:left;position:relative;}
+.mex1 .bottone{width: 200px;height: 55px;background-color: #f33131;border: 2px solid #c80707;border-radius: 10px;color: #ffffff;float: left;font-family: "Open Sans Condensed",sans-serif,Arial,Time new Roman,Verdana;font-size: 20px;left: 28%;top: 45%;position: relative;cursor:pointer;}
+.button{width:500px;height:65px;float:left;text-align:center;}
 .mex1 .bottone p{margin:15px 25px;font-size:16px;text-align:center;}
 .privacy{height:30px;width:500px;padding:0!important;margin-top:5px!important;float:left;}
 .privacy p{font-size:15px;font-family:Arial,Time new Roman,Verdana;padding:0!important;margin:0!important;}
-.style-bottom{
-	width:50%;
-	height:100%;
-	top:0px;
-	right:0px;
-	float:right;
-	position:relative;
-}
-.bottone-acquista{
-	width: 200px;
-	height: 55px;
-	background-color:#F29120;
-	border:2px solid #BC670F;
-	border-radius: 10px;
-	color: #ffffff;
-	float: left;
-	font-family: "Open Sans Condensed",sans-serif,Arial,Time new Roman,Verdana;
-	font-size: 20px;
-	left: 35%;
-	top: 45%;
-	position: relative;
-	cursor:pointer;
-}
+.style-bottom{width:50%;height:100%;top:0px;right:0px;float:right;position:relative;}
+.bottone-acquista{width: 200px;height: 55px;background-color:#F29120;border:2px solid #BC670F;border-radius: 10px;color: #ffffff;float: left;font-family: "Open Sans Condensed",sans-serif,Arial,Time new Roman,Verdana;font-size: 20px;left: 35%;top: 45%;position: relative;cursor:pointer;}
 .bottone-acquista a:hover{background-color:#DE9643!important;}
-.md-content button{
-	border-bottom:2px solid #ffb403;
-	border-top:0;
-	border-left:0;
-	border-right:0;
-	background:#F2C105;
-	color:#fff;
-	font-size:20px;
-	font-family:'Open Sans Condensed',sans-serif,Arial,Time new Roman,Verdana;
-	cursor:pointer;
-	display:inline-block;
-	margin:0;
-	width:70%;
-	height:50px
-}
-.md-content .button button:hover{
-	background:#ffcb01;
-}
-.body{width:100%;height:auto;background-color:#ffbf2e;float:left;}
-.colore-fondo-body{width:100%;height:auto;}
-.header-body{width:100%;height:70px;font-family:'Montserrat',sans-serif;background-color:#29917e;}
-.img-gm{width:700px;height:70px;margin:0 auto;}
-.img-gm img{width:65px;margin:10px;float:left;}
-.header-body h2{font-size:25px;margin:0;padding:20px;text-align:center;color:#fff;}
-.container-body{width:970px;height:360px;margin:0 auto;background-image:url("../images/body.jpg");background-repeat:no-repeat;}
-.container-body h2{margin-top:50px;}
-.container-body p{font-size:17px;font-weight:bold;}
+.md-content button{border-bottom:2px solid #ffb403;border-top:0;border-left:0;border-right:0;background:#F2C105;color:#fff;font-size:20px;font-family:'Open Sans Condensed',sans-serif,Arial,Time new Roman,Verdana;cursor:pointer;display:inline-block;margin:0;width:70%;height:50px}
+.md-content .button button:hover{background:#ffcb01;}
+/* PERCHè GESTIONE MESSAGGI */
+.colore-fondo-body{width:100%;height:100%;top:0px;left:0px;position:relative;overflow:hidden;background:#ffbf2e;}
+.header-body{width:100%;height:80px;font-family:'Montserrat',sans-serif;background-color:#29917e;}
+.img-gm{width:100%;max-width:1024px;height:80px;margin:0 auto;}
+.img-gm img{margin:-25px 0px 0px 0px;float:left;}
+.header-body h2{width:80%;font-size:25px;margin:0 auto;padding:26px 0px 0px 0px;text-align:center;color:#fff;}
+.container-body{width:100%;max-width:1024px;height:100%;margin:0 auto;background:url("../images/body.jpg") no-repeat center bottom;}
+.container-body h2{margin:50px 20px 0px 20px;}
+.container-body h3{margin:20px 20px 0px 20px;}
+.container-body p{font-size:17px;font-weight:bold;margin:20px 20px 0px 20px;}
 .testo-linea{width:970px;height:85px;}
 .h3{float:left;height:50px;}
 .hr{border-bottom:4px solid #f00;height:40px;float:left;padding-left:2px;}
@@ -129,47 +56,51 @@ a#leadpages-close-button{z-index:1;top:-9px;right:-9px;font-family:sans-serif,Ar
 .container-body p span{color:#f00!important;}
 .box-body{width:100%;height:auto;margin:0 auto;background-color:#fff;float:left;}
 .img-body{width:990px;height:550px;margin:0 auto;background-image:url("../images/body2.png");background-repeat:no-repeat;}
-.contenuto{width:100%;height:390px;background-color:#fff;float:left;}
-.descrizione-contenuto{width:990px;height:320px;margin:0 auto;padding-top:30px;background-image:url("../images/descrizione.jpg");background-repeat:no-repeat;}
-.descrizione-contenuto p{margin-top:0;font-size:18px;color:#000;}
-.clienti{width:100%;height:500px;background-color:#ffbf2e;float:left;}
-.header-clienti{width:100%;height:70px;font-family:'Montserrat',sans-serif;background-color:#29917e;}
-.img-clienti{width:770px;height:70px;margin:0 auto;}
-.img-clienti img{width:52px;margin:10px;float:left;}
-.clienti h2{font-size:25px;margin:0;padding:20px;text-align:center;color:#fff;}
-.contenuto-clienti{width:990px;height:auto;margin:0 auto;}
-.box-foto{width:235px;height:300px;float:left;text-align:center;margin-right:10px;margin-top:15px;}
-.box-foto img{margin:10px;}.box-stelle{width:140px;height:30px;margin:5px auto;}
+/* PERCHè GESTIONE MESSAGGI CONTENUTO */
+.contenuto{width:100%;height:100%;top:0;left:0;position:relative;overflow:hidden;background-color:#fff;float:left;}
+.descrizione-contenuto{width:100%;max-width:1024px;height:100%;margin:0 auto;padding-top:40px;background:url("../images/descrizione.jpg") no-repeat center right;}
+.descrizione-contenuto p{margin:20px 20px 0px 20px;font-size:18px;color:#000;}
+/* CLIENTI */
+.clienti{width:100%;height:100%;top:0px;left:0px;position:relative;overflow:hidden;background:#ffbf2e;}
+.header-clienti{width:100%;height:80px;font-family:'Montserrat',sans-serif;background-color:#29917e;}
+.img-clienti{width:100%;max-width:1024px;height:80px;margin:0 auto;}
+.img-clienti img{margin:-25px 0px 0px 0px;float:left;}
+.clienti h2{width:80%;font-size:25px;margin:0 auto;padding:26px 0px 0px 0px;text-align:center;color:#fff;}
+.contenuto-clienti{width:100%;max-width:1024px;height:100%;margin:0 auto;}
+.box-foto{width:24%;height:100%;float:left;text-align:center;margin-left:10px;margin-top:15px;}
+.box-foto img{margin:10px;}
+.box-stelle{width:145px;height:30px;margin:5px auto;}
 .stellap{background-image:url("../images/stellapiena.png");background-repeat:no-repeat;margin-left:3px;height:25px;width:25px;float:left;}
 .stellav{background-image:url("../images/stellavuota.png");background-repeat:no-repeat;margin-left:3px;height:25px;width:25px;float:left;}
-.scarica{width:100%;height:550px;background-color:#ffbf2e;float:left;}
-.header-scarica{width:100%;height:70px;font-family:'Montserrat',sans-serif;background-color:#29917e;}
-.img-scarica{width:880px;height:70px;margin:0 auto;}
-.img-scarica img{width:75px;margin:10px;float:left;}
-.scarica h2{font-size:25px;margin:0;padding:20px;text-align:center;color:#fff;}
-.contenuto-scarica{width:990px;height:425px;margin:0 auto;background-image:url("../images/prova.jpg");background-repeat:no-repeat;}
-.scarica .testo-scarica{width:75%;height:90px;padding-top:10px;}
+/* SCARICA */
+.scarica{width:100%;height:100%;top:0px;left:0px;position:relative;overflow:hidden;background:#ffbf2e;}
+.header-scarica{width:100%;height:80px;font-family:'Montserrat',sans-serif;background-color:#29917e;}
+.img-scarica{width:100%;max-width:1024px;height:80px;margin:0 auto;}
+.img-scarica img{margin:-25px 0px 0px 0px;float:left;}
+.scarica h2{width:90%;font-size:25px;margin:0 auto;padding:26px 0px 0px 0px;text-align:center;color:#fff;}
+.contenuto-scarica{width:100%;max-width:1024px;height:100%;margin:0 auto;background:url("../images/prova.jpg") no-repeat top right;}
+.scarica .testo-scarica{width:75%;height:90px;padding-top:10px;margin-left:20px;}
 .testo-scarica .text{color:#f03d3a;font-weight:bold;}
 .testo-scarica .text2{margin-top:10px;}
 .testo-scarica .text3{padding-top:10px;font-size:20px;color:#f03d3a;font-weight:bold;text-align:center;}
 .testo-scarica p{margin:0;}
-.screenschot{width:75%;height:auto;}
+.screenschot{width:75%;height:100%;}
 .box-screenschot{width:100%;height:auto;text-align:center;}
 .box-screenschot img{width:350px;margin-top:0;}
 .testo-screenschot p{margin:0;}
 .screenschot .bottone{width:200px;height:55px;margin-left:0;margin-top:15px;margin-bottom:20px;background-color:#f33131;border:2px solid #c80707;border-radius:10px 10px 10px 10px;float:left;text-align:center;}
 .acquista{width:200px;margin:0 auto;}
 .testo-screenschot{width:100%;height:50px;text-align:center;margin-top:15px;float:left;}
-.licenza{width:100%;height:550px;background-color:#ffbf2e;float:left;}
+/* LICENZA */
+.licenza{width:100%;height:100%;top:0px;left:0px;position:relative;overflow:hidden;background:#ffbf2e;}
 .header-licenza{width:100%;height:70px;font-family:'Montserrat',sans-serif;background-color:#29917e;}
 .img-acquista{width:460px;height:70px;margin:0 auto;}
 .img-acquista img{width:52px;margin:10px;float:left;}
 .licenza h2{font-size:25px;margin:0;padding:20px;text-align:center;float:left;color:#fff;}
-.descrizione-licenza{width:990px;height:auto;margin:0 auto;}
-.box-promozione{width:270px;height:70px;margin:-25px auto;}
-.box-promozione img{width:100%;}
+.descrizione-licenza{width:95%;height:auto;margin:0 auto;}
+.box-promozione{width:270px;height:70px;margin:0px auto;}
 .box-descprezzo{width:470px;height:160px;margin:0 auto;}
-.box-descprezzo .tabella{width:470px;display:table;margin:45px auto;font-size:15px;}
+.box-descprezzo .tabella{width:470px;display:table;margin:30px auto;font-size:15px;}
 .box-descprezzo .riga1{clear:both;display:block;display:table-row;width:100%;height:30px;background-color:#d9d9d9;font-family:'Montserrat',sans-serif;}
 .box-descprezzo .riga2{clear:both;display:block;display:table-row;width:100%;height:35px;background-color:#FFF;font-family:'Montserrat',sans-serif;}
 .box-descprezzo .colonna1{float:left;width:60%;display:table-cell;text-align:center;margin-top:7px;font-family:'Montserrat',sans-serif;}
@@ -181,7 +112,15 @@ a#leadpages-close-button{z-index:1;top:-9px;right:-9px;font-family:sans-serif,Ar
 .box-descprezzo .colonna4 font{color:#f00;}
 .aggiungi{width:205px;margin:0 auto;}
 .aggiungi-bottone{width:200px;height:50px;margin:0 auto;background-color:#F33131;border:2px solid #C80707;border-radius:10px 10px 10px 10px;font-size:18px;font-family:'Open Sans Condensed',sans-serif,Arial,Time new Roman,Verdana;}
-.box-crediti{width:100%;height:auto;background-color:#ffbf2e;float:left;margin-bottom:50px;}
+.box-crediti{
+	width:100%;
+	height:100%;
+	top:0px;
+	left:0px;
+	position:relative;
+	overflow:hidden;
+	background:#ffbf2e;
+}
 .header-crediti{width:100%;height:70px;font-family:'Montserrat',sans-serif;background-color:#29917e;margin:0 auto;}
 .img-crediti{width:400px;height:70px;margin:0 auto;}
 .img-crediti img{width:65px;margin:10px;float:left;}
@@ -205,7 +144,15 @@ a#leadpages-close-button{z-index:1;top:-9px;right:-9px;font-family:sans-serif,Ar
 .colonna4 .bottonerosso{width:150px;height:40px;margin:0 auto;background-color:#F33131;border:2px solid #C80707;border-radius:10px;font-family:'Montserrat',sans-serif;font-size:10px;}
 .textfine-crediti{width:970px;height:auto;margin:10px auto;text-align:center;font-size:13px;}
 .header-box{width:990px;height:70px;margin:0 auto;font-family:'Montserrat',sans-serif;}
-.box-guida{width:100%;height:500px;background-color:#ffbf2e;float:left;}
+.box-guida{
+	width:100%;
+	height:100%;
+	top:0px;
+	left:0px;
+	position:relative;
+	overflow:hidden;
+	background:#ffbf2e;
+}
 .header-guida{width:100%;height:70px;font-family:'Montserrat',sans-serif;background-color:#29917e;}
 .header-guida h2{font-size:25px;margin:0;padding:20px;text-align:center;color:#fff;}
 .img-guida{width:239px;height:70px;margin:0 auto;}
@@ -289,8 +236,10 @@ Main components
 -------------------------------- */
 .cd-main-content {
   /* set a min-height and a z-index to be sure that the main element completely covers the lateral menu */
-  min-height: 100%;
-  position: relative;
+  width:100%;
+  height: 100%;
+  top:0;
+  left:0;
   z-index: 2;
   padding-top: 74px;
   /* Force Hardware Acceleration in WebKit */
