--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -43,8 +43,8 @@ a#leadpages-close-button{z-index:1;top:-9px;right:-9px;font-family:sans-serif,Ar
 .colore-fondo-body{width:100%;height:100%;top:0px;left:0px;position:relative;overflow:hidden;background:#ffbf2e;}
 .header-body{width:100%;height:80px;font-family:'Montserrat',sans-serif;background-color:#29917e;}
 .img-gm{width:100%;max-width:1024px;height:80px;margin:0 auto;}
-.img-gm img{margin:-25px 0px 0px 0px;float:left;}
-.header-body h2{width:80%;font-size:25px;margin:0 auto;padding:26px 0px 0px 0px;text-align:center;color:#fff;}
+.img-gm img{margin:-15px 0px 0px 0px;float:left;}
+.header-body h2{width:70%;font-size:25px;margin:0 auto;padding:26px 0px 0px 0px;text-align:center;color:#fff;}
 .container-body{width:100%;max-width:1024px;height:100%;margin:0 auto;background:url("../images/body.jpg") no-repeat center bottom;}
 .container-body h2{margin:50px 20px 0px 20px;}
 .container-body h3{margin:20px 20px 0px 20px;}
@@ -64,8 +64,8 @@ a#leadpages-close-button{z-index:1;top:-9px;right:-9px;font-family:sans-serif,Ar
 .clienti{width:100%;height:100%;top:0px;left:0px;position:relative;overflow:hidden;background:#ffbf2e;}
 .header-clienti{width:100%;height:80px;font-family:'Montserrat',sans-serif;background-color:#29917e;}
 .img-clienti{width:100%;max-width:1024px;height:80px;margin:0 auto;}
-.img-clienti img{margin:-25px 0px 0px 0px;float:left;}
-.clienti h2{width:80%;font-size:25px;margin:0 auto;padding:26px 0px 0px 0px;text-align:center;color:#fff;}
+.img-clienti img{margin:-10px 0px 0px 0px;float:left;}
+.clienti h2{width:75%;font-size:25px;margin:0 auto;padding:26px 0px 0px 0px;text-align:center;color:#fff;}
 .contenuto-clienti{width:100%;max-width:1024px;height:100%;margin:0 auto;}
 .box-foto{width:24%;height:100%;float:left;text-align:center;margin-left:10px;margin-top:15px;}
 .box-foto img{margin:10px;}
@@ -76,8 +76,8 @@ a#leadpages-close-button{z-index:1;top:-9px;right:-9px;font-family:sans-serif,Ar
 .scarica{width:100%;height:100%;top:0px;left:0px;position:relative;overflow:hidden;background:#ffbf2e;}
 .header-scarica{width:100%;height:80px;font-family:'Montserrat',sans-serif;background-color:#29917e;}
 .img-scarica{width:100%;max-width:1024px;height:80px;margin:0 auto;}
-.img-scarica img{margin:-25px 0px 0px 0px;float:left;}
-.scarica h2{width:90%;font-size:25px;margin:0 auto;padding:26px 0px 0px 0px;text-align:center;color:#fff;}
+.img-scarica img{margin:-15px 0px 0px 0px;float:left;}
+.scarica h2{width:85%;font-size:25px;margin:0 auto;padding:26px 0px 0px 0px;text-align:center;color:#fff;}
 .contenuto-scarica{width:100%;max-width:1024px;height:100%;margin:0 auto;background:url("../images/prova.jpg") no-repeat top right;}
 .scarica .testo-scarica{width:75%;height:90px;padding-top:10px;margin-left:20px;}
 .testo-scarica .text{color:#f03d3a;font-weight:bold;}
@@ -93,12 +93,12 @@ a#leadpages-close-button{z-index:1;top:-9px;right:-9px;font-family:sans-serif,Ar
 .testo-screenschot{width:100%;height:50px;text-align:center;margin-top:15px;float:left;}
 /* LICENZA */
 .licenza{width:100%;height:100%;top:0px;left:0px;position:relative;overflow:hidden;background:#ffbf2e;}
-.header-licenza{width:100%;height:70px;font-family:'Montserrat',sans-serif;background-color:#29917e;}
-.img-acquista{width:460px;height:70px;margin:0 auto;}
-.img-acquista img{width:52px;margin:10px;float:left;}
-.licenza h2{font-size:25px;margin:0;padding:20px;text-align:center;float:left;color:#fff;}
-.descrizione-licenza{width:95%;height:auto;margin:0 auto;}
-.box-promozione{width:270px;height:70px;margin:0px auto;}
+.header-licenza{width:100%;height:80px;font-family:'Montserrat',sans-serif;background-color:#29917e;}
+.img-acquista{width:100%;max-width:1024px;height:80px;margin:0 auto;}
+.img-acquista img{margin:-15px 0px 0px 0px;float:left;}
+.licenza h2{width:40%;font-size:25px;margin:0 auto;padding:26px 0px 0px 0px;text-align:center;color:#fff;}
+.descrizione-licenza{width:95%;max-width:1024px;height:auto;margin:0 auto;}
+.box-promozione{width:300px;height:70px;margin:0px auto;}
 .box-descprezzo{width:470px;height:160px;margin:0 auto;}
 .box-descprezzo .tabella{width:470px;display:table;margin:30px auto;font-size:15px;}
 .box-descprezzo .riga1{clear:both;display:block;display:table-row;width:100%;height:30px;background-color:#d9d9d9;font-family:'Montserrat',sans-serif;}
@@ -112,23 +112,16 @@ a#leadpages-close-button{z-index:1;top:-9px;right:-9px;font-family:sans-serif,Ar
 .box-descprezzo .colonna4 font{color:#f00;}
 .aggiungi{width:205px;margin:0 auto;}
 .aggiungi-bottone{width:200px;height:50px;margin:0 auto;background-color:#F33131;border:2px solid #C80707;border-radius:10px 10px 10px 10px;font-size:18px;font-family:'Open Sans Condensed',sans-serif,Arial,Time new Roman,Verdana;}
-.box-crediti{
-	width:100%;
-	height:100%;
-	top:0px;
-	left:0px;
-	position:relative;
-	overflow:hidden;
-	background:#ffbf2e;
-}
-.header-crediti{width:100%;height:70px;font-family:'Montserrat',sans-serif;background-color:#29917e;margin:0 auto;}
-.img-crediti{width:400px;height:70px;margin:0 auto;}
-.img-crediti img{width:65px;margin:10px;float:left;}
-.header-crediti h2{font-size:25px;margin-top:0;padding:20px;text-align:center;float:left;color:#fff;}
-.descrizione-crediti{width:990px;height:auto;margin:15px auto;}
-.descrizione-pagamento{width:990px;height:auto;margin:15px auto;}
+/* ACQUISTA SMS */
+.box-crediti{width:100%;height:auto;top:0px;left:0px;position:relative;overflow:hidden;background:#ffbf2e;}
+.header-crediti{width:100%;height:70px;font-family:'Montserrat',sans-serif;background-color:#29917e;}
+.img-crediti{width:100%;height:70px;margin:0 auto;}
+.img-crediti img{margin:-15px 0px 0px 0px;float:left;}
+.header-crediti h2{width:40%;font-size:25px;margin:0 auto;padding:26px 0px 0px 0px;text-align:center;color:#fff;}
+.descrizione-crediti{width:95%;max-width:1024px;height:auto;margin:0 auto;}
+.descrizione-pagamento{width:95%;max-width:1024px;height:auto;margin:15px auto;}
 .descrizione-pagamento p{text-align:left;}
-.tabella{display:table;width:990px;margin:0 auto;font-size:15px;}
+.tabella{display:table;max-width:990px;width:100%;margin:0 auto;font-size:15px;}
 .riga1{clear:both;display:block;display:table-row;width:100%;height:30px;background-color:#d9d9d9;font-family:'Montserrat',sans-serif;}
 .riga1 .colonna{margin-top:8px;}
 .riga2{clear:both;display:block;display:table-row;width:100%;height:45px;background-color:#fff;}
@@ -142,27 +135,21 @@ a#leadpages-close-button{z-index:1;top:-9px;right:-9px;font-family:sans-serif,Ar
 .aggiungi-tab-rosso{width:150px;margin:0 auto;}
 .colonna4 .bottone{width:150px;height:40px;margin:0 auto;background-color:#F29120;border:2px solid #BC670F;border-radius:10px;color:#000;font-family:'Montserrat',sans-serif;font-size:10px;}
 .colonna4 .bottonerosso{width:150px;height:40px;margin:0 auto;background-color:#F33131;border:2px solid #C80707;border-radius:10px;font-family:'Montserrat',sans-serif;font-size:10px;}
-.textfine-crediti{width:970px;height:auto;margin:10px auto;text-align:center;font-size:13px;}
-.header-box{width:990px;height:70px;margin:0 auto;font-family:'Montserrat',sans-serif;}
-.box-guida{
-	width:100%;
-	height:100%;
-	top:0px;
-	left:0px;
-	position:relative;
-	overflow:hidden;
-	background:#ffbf2e;
-}
-.header-guida{width:100%;height:70px;font-family:'Montserrat',sans-serif;background-color:#29917e;}
-.header-guida h2{font-size:25px;margin:0;padding:20px;text-align:center;color:#fff;}
-.img-guida{width:239px;height:70px;margin:0 auto;}
-.img-guida img{width:62px;margin:10px;float:left;}
-.contenuto-guida{width:990px;height:410px;margin:0 auto;background-image:url("../images/guida.jpg");background-repeat:no-repeat;font-size:20px;}
-.libreria{width:100%;}
+.textfine-crediti{width:95%;height:auto;margin:10px auto;text-align:center;font-size:13px;}
+/* GUIDA */
+.box-guida{width:100%;height:100%;top:0px;left:0px;position:relative;overflow:hidden;background:#ffbf2e;}
+.header-guida{width:100%;height:80px;font-family:'Montserrat',sans-serif;background-color:#29917e;}
+.img-guida{width:100%;height:80px;margin:0 auto;}
+.img-guida img{margin:-5px 0px 0px 0px;float:left;}
+.header-guida h2{width:25%;font-size:25px;margin:0 auto;padding:26px 0px 0px 0px;text-align:center;color:#fff;}
+.descrizione-guida{width:95%;max-width:1024px;height:auto;margin:0 auto;}
+.contenuto-guida{width:100%;height:100%;top:0;left:0;position:relative;overflow:hidden;margin:0 auto;background:url("../images/guida.jpg") no-repeat center right;font-size:20px;}
+.libreria{width:100%;max-width:1024px;margin:0px auto;}
 .libreria img{width:500px;}
-.botton-guida .bottone{width:200px;height:50px;margin:0 auto;background-color:#F33131;border:2px solid #C80707;border-radius:10px 10px 10px 10px;}
-.botton-guida{width:205px;margin:30px 150px;}
+.botton-guida{width:205px;margin:30px auto;width:100%;max-width:1024px;text-align:center;}
+.botton-guida .bottone{width:200px;height:50px;margin:0 15%;background-color:#F33131;border:2px solid #C80707;border-radius:10px;}
 .botton-guida .bottone p{color:#fff!important;margin:12px auto;font-size:18px;text-align:center;}
+/* FOOTER */
 .footer{width:100%;height:auto;float:left;background-color:#fff;}
 .footer-container{width:990px;height:300px;margin:10px auto;}
 .box-footer-left{width:22%;height:100%;float:left;text-align:left;margin:0 10px;font-family:'Montserrat',sans-serif;}
